--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     <title>Frontend Mentor | Profile card component</title>
   </head>
 
-  <body>
+  <body class="flex">
     <article class="profile-card">
-      <section class="profile__bio">
+      <section class="profile__bio flex">
         <div class="img-wrapper">
           <img
             src="images/image-victor.jpg"
@@ -47,15 +47,15 @@
       </section>
 
       <section class="profile__stats">
-        <div class="stat__item">
+        <div class="stat__item flex">
           <span class="stat__line">80K</span>
           <span class="stat__title">Followers</span>
         </div>
-        <div class="stat__item">
+        <div class="stat__item flex">
           <span class="stat__line">803K</span>
           <span class="stat__title">Likes</span>
         </div>
-        <div class="stat__item">
+        <div class="stat__item flex">
           <span class="stat__line">1.4K</span>
           <span class="stat__title">Photos</span>
         </div>
