--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
   </head>
 
   <body class="flex">
-    <article class="profile-card">
-      <section class="profile__bio flex">
+    <main class="profile-card">
+      <header class="profile__bio flex">
         <div class="img-wrapper">
           <img
             src="images/image-victor.jpg"
@@ -37,16 +37,16 @@
           />
           <div class="overlay"></div>
         </div>
-        <p class="profile__name">
+        <h1 class="profile__name">
           Victor Crest
           <span class="profile__age">26</span>
-        </p>
+        </h1>
         <p class="profile__location">
           London
         </p>
-      </section>
+      </header>
 
-      <section class="profile__stats">
+      <aside class="profile__stats">
         <div class="stat__item flex">
           <span class="stat__line">80K</span>
           <span class="stat__title">Followers</span>
@@ -59,8 +59,8 @@
           <span class="stat__line">1.4K</span>
           <span class="stat__title">Photos</span>
         </div>
-      </section>
-    </article>
+      </aside>
+    </main>
 
     <footer class="attribution">
       Challenge by
